--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
                             <div class="panel active">
                                 <div class="card-content-education">
                                     <h3 id="Gemiddeld">Gemiddeldes van de vakken:</h3>
-                                    <p id="Nederlands">Nederlands: 6,5</p>
-                                    <p id="Engels">Engels: 6,8</p>
-                                    <p id="Wiskunde">Wiskunde: 6,3</p>
-                                    <p id="Natuurkunde">Natuurkunde: 6,5</p>
+                                    <p id="Nederlands">Nederlands: 6</p>
+                                    <p id="Engels">Engels: 8</p>
+                                    <p id="Wiskunde">Wiskunde: 7</p>
+                                    <p id="Natuurkunde">Natuurkunde: 7</p>
                                     <p id="PIE">PIE: 7,0</p>
-                                    <p id="LOB">LOB: 6,5</p>
+                                    <p id="LOB">Maatschappijleer: 8</p>
                                 </div>
                             </div>
                         </div>
