--- a/index.html
+++ b/index.html
@@ -39,20 +39,25 @@
                         <a id="LKLink" href="https://www.linkedin.com/in/tim-olree-93151a352/">linkedin</a>
                     </div>
                 </div>
-                <h3>Welkom op mijn home-pagina! Neem gerust een kijkje of gebruik het navigatiemenu links om door mijn pagina te navigeren. Wat u op deze website kan verwachten is een stukje over mijzelf, projecten die ik heb gemaakt en mijn educatie en voortgang er van.</h3>
+                <h3>Welkom op mijn home-pagina! Hier boven kunt u mijn Linkedin of Github pagina's bezoeken. Kijk gerust rond naar mijn projecten!</h3>
             </section>
             <section id="AboutMe">
                 <h2>About me</h2>
                 <div class="underline"></div>
                 <div class="ease-in">
                     <div class="about-container">
-                        <p class="">
-                            Ik ben Tim Olree. Ik ben zestien jaar oud en ik ben geboren in Goes. Ik ben woonachtig te Zierikzee en ik ben inwonened met mijn moeder en stiefvader. 
+                        <p>
+                            Ik ben Tim Olree.
+                            Ik ben zestien jaar oud en ik ben geboren in Goes. Ik ben woonachtig te Zierikzee en ik ben inwonened met mijn moeder en stiefvader. 
                             Ik ben een persoon die graag een praatje maakt met iemand en die goed kan lachen met anderen. Ik ben daarom ook heel sociaal en zal niet zomaar voor een probleem wegkruipen. Ik hou heel erg veel van gamen, zwemmen en muziek luisteren. Ik kan me heel goed concentreren door muziek, dus muziek helpt me bij het maken van projecten
                         </p>
                             <img src="pictures/TimOlree.jpg" >
                     </div>
+                    
                 </div>
+                <img src="pictures/Starboy.jpg" alt="" id="Starboy">
+                <img src="pictures/minecraftLogo.webp" alt="" id="Starboy">
+                <img src="pictures/rbzdLogo.png" alt="" id="Starboy">
             </section>
             <section id="Projects">
                 <h2>Projects</h2>
@@ -65,10 +70,10 @@
                             <div class="card-content">
                                 <h3>Pokémon console game</h3>
                                 <img src="pictures/Poké_Ball_icon.png" alt="" class="card-image1" />
-                                <a href="pictures/Schermafbeelding 2025-02-20 085354.png" data-fancybox="gallery" data-caption="de uitkomst van mijn code"></a>
-                                    <img src="pictures/Schermafbeelding 2025-02-20 085354.png" alt="" class="card-image2" data-fancybox data-caption="Single image"/>
+                                <a href="pictures/Schermafbeelding 2025-03-25 103215.png" data-fancybox="gallery" data-caption="de uitkomst van mijn code"></a>
+                                    <img src="pictures/Schermafbeelding 2025-03-25 103215.png" alt="" class="card-image2" data-fancybox data-caption="Single image"/>
                                 </a>
-                                <p>Ik heb voor mijn 6e sprint bij Scalda Vlissingen de opdracht gekregen om een pokémon console game te maken. Dit heb ik gedaan aan de hand van Java. We kregen in totaal 3 weken om deze opdracht te maken, maar ik heb het in twee dagen af kunnen maken omdat ik de stof goed snap en beheers. Ik vond deze opdracht zeer leuk om te doen en dingen die ik niet snapte had ik al snel opgelost door een snelle google of zelf te experimenteren</p>
+                                <p>Ik heb voor mijn 6e sprint bij Scalda Vlissingen de opdracht gekregen om een pokémon console game te maken. Dit heb ik gedaan aan de hand van Java. We kregen in totaal 3 weken om deze opdracht te maken, maar ik heb het in twee dagen af kunnen maken omdat ik de stof goed snap en beheers. Ik vond deze opdr</p>
                             </div>
                         </div>
                     </div>
@@ -78,8 +83,8 @@
                             <div class="panel active">
                                 <div class="card-content">
                                     <h3>Godot game</h3>
-                                    <a href="pictures/Schermafbeelding 2025-02-18 094432.png" data-fancybox="gallery" data-caption="Boss 'Kabonk'">
-                                        <img src="pictures/Schermafbeelding 2025-02-18 094432.png" alt="" class="card-image3" />
+                                    <a href="pictures/Schermafbeelding 2025-03-25 100212.png" data-fancybox="gallery" data-caption="Boss 'claude'">
+                                        <img src="pictures/Schermafbeelding 2025-03-25 100212.png" alt="" class="card-image3" />
                                     </a>
                                     <a href="pictures/Schermafbeelding 2025-02-18 094453.png" data-fancybox="gallery" data-caption="gestructureerde code en player scene">
                                         <img src="pictures/Schermafbeelding 2025-02-18 094453.png" alt="" class="card-image4" />
