--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                         <img id="LKPic" src="pictures/LinkedIn.png" alt="">
                         <a id="LKLink" href="https://www.linkedin.com/in/tim-olree-93151a352/">linkedin</a>
                     </div>
+                    <div id="cvLink">
+                        <img src="pictures/image-removebg-preview.png" alt="" id="cvPic">
+                        <a href="pdf/Tim Olree.pdf">mijn CV</a>
+                    </div>
                 </div>
                 <h3>Welkom op mijn home-pagina! Hier boven kunt u mijn Linkedin of Github pagina's bezoeken. Kijk gerust rond naar mijn projecten!</h3>
             </section>
